--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>To-Do List</h1>
   <input type="text" id="taskInput" placeholder="Add new task">
   <button onclick="addTask()">Add</button>
+  <button onclick="clearAllTasks()">Clear All</button>
   <ul id="taskList"></ul>
 
   <script src="script.js"></script>
